Step 8: Added JavaDoc and other test methods

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -43,3 +43,6 @@ include::{snippets}/shouldGetOneCustomer/response-body.adoc[]
 = Documentación auto generada
 
 include::{snippets}/customers-controller-test/test-create-one-customer/auto-section.adoc[]
+include::{snippets}/customers-controller-test/test-get-one-customer/auto-section.adoc[]
+include::{snippets}/customers-controller-test/test-update/auto-section.adoc[]
+include::{snippets}/customers-controller-test/test-find-all/auto-section.adoc[]
