--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -19,3 +19,27 @@ include::{snippets}/shouldCreateCustomer/http-response.adoc[]
 include::{snippets}/shouldCreateCustomer/request-fields.adoc[]
 .Campos de salida
 include::{snippets}/shouldCreateCustomer/response-fields.adoc[]
+
+
+=== POST /customers
+
+.Ejemplo de petición con curl
+include::{snippets}/shouldCreateCustomer/curl-request.adoc[]
+.Respuesta HTTP
+include::{snippets}/shouldCreateCustomer/http-response.adoc[]
+.Campos de entrada
+include::{snippets}/shouldCreateCustomer/request-fields.adoc[]
+.Campos de salida
+include::{snippets}/shouldCreateCustomer/response-fields.adoc[]
+
+=== GET /customer/{customerId}
+
+
+.Ejemplo de petición con curl
+include::{snippets}/shouldGetOneCustomer/curl-request.adoc[]
+.Respuesta HTTP
+include::{snippets}/shouldGetOneCustomer/http-response.adoc[]
+.Parámetros de la petición
+include::{snippets}/shouldGetOneCustomer/path-parameters.adoc[]
+.Campos de salida
+include::{snippets}/shouldGetOneCustomer/response-fields.adoc[]
