--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -43,3 +43,8 @@ include::{snippets}/shouldGetOneCustomer/http-response.adoc[]
 include::{snippets}/shouldGetOneCustomer/path-parameters.adoc[]
 .Campos de salida
 include::{snippets}/shouldGetOneCustomer/response-fields.adoc[]
+
+
+= Documentación auto generada
+
+include::{snippets}/customers-controller-test/test-create-one-customer/auto-section.adoc[]
