--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,4 +1,3 @@
-= Empezando con Spring REST Docs
 = Getting started with Spring REST Docs
 :doctype: book
 :icons: font
@@ -7,59 +6,37 @@
 
 == Customers API
 
-Documentación de la API Customers generada con Spring REST Docs a partir de tests unitarios.
-
-.Ejemplo de petición con curl
-include::{snippets}/shouldCreateCustomer/curl-request.adoc[]
-.Respuesta HTTP
-include::{snippets}/shouldCreateCustomer/http-response.adoc[]
-.Campos de entrada
-include::{snippets}/shouldCreateCustomer/request-fields.adoc[]
-.Campos de salida
-include::{snippets}/shouldCreateCustomer/response-fields.adoc[]
-
 Customers API documentation generated from unit tests with Spring REST Docs.
 
 === POST /customers
 
-.Ejemplo de petición con curl
 .curl sample request
 include::{snippets}/shouldCreateCustomer/curl-request.adoc[]
-.Respuesta HTTP
 .HTTP Response
 include::{snippets}/shouldCreateCustomer/http-response.adoc[]
-.Campos de entrada
-.Input
+.Request fields
 include::{snippets}/shouldCreateCustomer/request-fields.adoc[]
-.Campos de salida
-.Output
+.Response fields
 include::{snippets}/shouldCreateCustomer/response-fields.adoc[]
 
 === GET /customer/{customerId}
 
 
-.Ejemplo de petición con curl
 .curl sample request
 include::{snippets}/shouldGetOneCustomer/curl-request.adoc[]
-.Respuesta HTTP
 .HTTP Response
 include::{snippets}/shouldGetOneCustomer/http-response.adoc[]
-.Parámetros de la petición
 .Request parameters
 include::{snippets}/shouldGetOneCustomer/path-parameters.adoc[]
-.Campos de salida
 .Output
 include::{snippets}/shouldGetOneCustomer/response-fields.adoc[]
 
-
-= Documentación auto generada
 = Generated documentation
 
 include::{snippets}/customers-controller-auto-docs-test/create-customer/auto-section.adoc[]
 include::{snippets}/customers-controller-auto-docs-test/test-find-all/auto-section.adoc[]
 include::{snippets}/customers-controller-auto-docs-test/test-find-one/auto-section.adoc[]
 include::{snippets}/customers-controller-auto-docs-test/test-update/auto-section.adoc[]
-
 
 [[overview-pagination]]
 === Pagination
